@@ -5,6 +5,8 @@
 	- fix a bug in the sourcesList rewriting (ubuntu: #46245)
 	- expand the terminal when no libgnome2-perl is installed
           because debconf might want to ask questions (ubuntu: #46214)
+	- disable the breezy cdrom source to make removal of demoted
+	  packages work properly (ubuntu: #46336)
 2006-05-12: 
 	- space checking improved (ubuntu: #43948)
         - show software that was demoted from main -> universe 
